crates/plotnik-compiler/src/emit/snapshots/plotnik_lib__emit__emit_tests__quantifiers_first_child_array.snap
---
source: crates/plotnik-lib/src/emit/emit_tests.rs
---
Test = (array (identifier)* @ids (number) @n)
---
[strings]
S0 "Beauty will save the world"
S1 "ids"
S2 "n"
S3 "Test"
S4 "array"
S5 "identifier"
S6 "number"

[type_defs]
T0 = <Node>
T1 = ArrayStar(T0)  ; <Node>*
T2 = Struct  M0:2  ; { ids, n }
T3 = Struct  M2:1  ; { ids }
T4 = Struct  M3:1  ; { n }

[type_members]
M0: S1 → T1  ; ids: T1
M1: S2 → T0  ; n: <Node>
M2: S1 → T1  ; ids: T1
M3: S2 → T0  ; n: <Node>

[type_names]
N0: S3 → T2  ; Test

[entrypoints]
Test = 06 :: T2

[transitions]
_ObjWrap:
  00   ε   [Obj]                            02
  02       Trampoline                       03
  03   ε   [EndObj]                         05
  05                                        ▶

Test:
  06   ε                                    07
  07   !   (array)                          08
  08   ε   [Arr]                            10
  10   ε                                    31, 24
  12   !   (identifier) [Node Push]         14
  14   ε                                    37, 21
  16                                        ▶
  17   ▽   (number) [Node Set(M1)]          38
  19   ▷   (number) [Node Set(M1)]          38
  21   ε   [EndArr Set(M0)]                 19
  23  ...  
  24   ε   [EndArr Set(M0)]                 17
  26   ▷   _                                29
  27   ε                                    26, 21
  29   ε                                    12, 27
  31   ▽   _                                29
  32   ▷   _                                35
  33   ε                                    32, 21
  35   ε                                    12, 33
  37   ▷   _                                35
  38   △   _                                16
