crates/plotnik-compiler/src/emit/snapshots/plotnik_lib__emit__emit_tests__quantifiers_plus_nongreedy.snap
---
source: crates/plotnik-lib/src/emit/emit_tests.rs
---
Test = (identifier)+? @items
---
[strings]
S0 "Beauty will save the world"
S1 "items"
S2 "Test"
S3 "identifier"

[type_defs]
T0 = <Node>
T1 = ArrayPlus(T0)  ; <Node>+
T2 = Struct  M0:1  ; { items }

[type_members]
M0: S1 → T1  ; items: T1

[type_names]
N0: S2 → T2  ; Test

[entrypoints]
Test = 06 :: T2

[transitions]
_ObjWrap:
  00   ε   [Obj]                            02
  02       Trampoline                       03
  03   ε   [EndObj]                         05
  05                                        ▶

Test:
  06   ε                                    08
  07  ...  
  08   ε   [Arr]                            10
  10   !   _                                19
  11   !   (identifier) [Node Push]         13
  13   ε                                    16, 26
  15                                        ▶
  16   ε   [EndArr Set(M0)]                 15
  18   ▷   _                                19
  19   ε                                    18, 11
  21   ▷   _                                24
  22   ε                                    16, 21
  24   ε                                    22, 11
  26   ▷   _                                24
