crates/plotnik-compiler/src/emit/snapshots/plotnik_lib__emit__emit_tests__quantifiers_repeat_navigation.snap
---
source: crates/plotnik-lib/src/emit/emit_tests.rs
---
Test = (function_declaration (decorator)* @decs)
---
[strings]
S0 "Beauty will save the world"
S1 "decs"
S2 "Test"
S3 "function_declaration"
S4 "decorator"

[type_defs]
T0 = <Node>
T1 = ArrayStar(T0)  ; <Node>*
T2 = Struct  M0:1  ; { decs }

[type_members]
M0: S1 → T1  ; decs: T1

[type_names]
N0: S2 → T2  ; Test

[entrypoints]
Test = 06 :: T2

[transitions]
_ObjWrap:
  00   ε   [Obj]                            02
  02       Trampoline                       03
  03   ε   [EndObj]                         05
  05                                        ▶

Test:
  06   ε                                    07
  07   !   (function_declaration)           08
  08   ε   [Arr]                            10
  10   ε                                    28, 21
  12   ε   [EndArr Set(M0)]                 14
  14   △   _                                20
  15  ...  
  16   !   (decorator) [Node Push]          18
  18   ε                                    34, 12
  20                                        ▶
  21   ε   [EndArr Set(M0)]                 20
  23   ▷   _                                26
  24   ε                                    23, 12
  26   ε                                    16, 24
  28   ▽   _                                26
  29   ▷   _                                32
  30   ε                                    29, 12
  32   ε                                    16, 30
  34   ▷   _                                32
