crates/plotnik-compiler/src/emit/snapshots/plotnik_lib__emit__emit_tests__quantifiers_struct_array.snap
---
source: crates/plotnik-lib/src/emit/emit_tests.rs
---
Test = (array {(identifier) @a (number) @b}* @items)
---
[strings]
S0 "Beauty will save the world"
S1 "a"
S2 "b"
S3 "items"
S4 "Test"
S5 "array"
S6 "identifier"
S7 "number"

[type_defs]
T0 = <Node>
T1 = Struct  M0:2  ; { a, b }
T2 = ArrayStar(T1)  ; T1*
T3 = Struct  M2:1  ; { items }
T4 = Struct  M3:1  ; { a }
T5 = Struct  M4:1  ; { b }

[type_members]
M0: S1 → T0  ; a: <Node>
M1: S2 → T0  ; b: <Node>
M2: S3 → T2  ; items: T2
M3: S1 → T0  ; a: <Node>
M4: S2 → T0  ; b: <Node>

[type_names]
N0: S4 → T3  ; Test

[entrypoints]
Test = 06 :: T3

[transitions]
_ObjWrap:
  00   ε   [Obj]                            02
  02       Trampoline                       03
  03   ε   [EndObj]                         05
  05                                        ▶

Test:
  06   ε                                    07
  07   !   (array)                          08
  08   ε   [Arr]                            10
  10   ε                                    36, 21
  12   ε   [EndArr Set(M2)]                 14
  14   △   _                                20
  15  ...  
  16   ε   [EndObj Push]                    18
  18   ε                                    42, 12
  20                                        ▶
  21   ε   [EndArr Set(M2)]                 20
  23  ...  
  24   ▷   (number) [Node Set(M1)]          16
  26   !   (identifier) [Node Set(M0)]      24
  28   ε   [Obj]                            26
  30   ▷   _                                34
  31  ...  
  32   ε                                    30, 12
  34   ε                                    28, 32
  36   ▽   _                                34
  37   ▷   _                                40
  38   ε                                    37, 12
  40   ε                                    28, 38
  42   ▷   _                                40
